# vogelring

./: .gitignore  CHANGELOG.md  DEVELOPMENT_SETUP.md  DOCKER_README.md  ENVIRONMENT_SETUP.md  README.md  debug_rls.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  header.md  postgres.conf  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh  run_migration.py  sample_api_calls.md  setup_admin.py  task.md  test_multi_user.py  test_org_context.py  test_rls.py
.cursor/rules/: api-patterns.mdc  backend-patterns.mdc  conventional-commits.mdc  database-schema.mdc  development-workflow.mdc  dry-principle.mdc  frontend-patterns.mdc  github-issue-workflow.mdc  no-overengineering.mdc  project-overview.mdc
.github/: .release-please-manifest.json  CONTRIBUTING.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
auth/: auth.js  auth.py
backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  run_tests.py  upsert_prod.py  upsert_ringings_csv.py  upsert_with_env.py
backend/database/: init.sql
backend/scripts/: build_ring_places.py  migrate_sighting_age_sex.py  migrate_unidirectional.py  run_tests.py  upsert_prod.py  upsert_ringings_csv.py  upsert_with_env.py
backend/src/: main.py
backend/src/api/routers/: __init__.py  admin.py  analytics.py  auth.py  birds.py  dashboard.py  family.py  health.py  places.py  reports.py  ringings.py  sightings.py  species.py  suggestions.py
backend/src/api/services/: analytics_service.py  bird_service.py  family_service.py  ringing_service.py  sighting_service.py  suggestion_service.py
backend/src/data/: ring_geo.json  ring_places.json
backend/src/database/: __init__.py  connection.py  family_models.py  family_repository.py  models.py  organization_models.py  organization_repository.py  repositories.py  test_models.py  user_aware_repositories.py  user_models.py  user_repository.py  utils.py
backend/src/utils/: auth.py  cache.py  distance.py  logging_config.py  ring_places.py  sighting_coding.py  version.py
backend/tests/: README.md  conftest.py  test_api_analytics.py  test_api_dashboard.py  test_api_reports.py  test_api_ringings.py  test_api_sightings.py  test_api_sightings_export.py  test_api_suggestions.py  test_database_repositories.py  test_database_setup.py  test_family_repository.py  test_migration_scripts.py  test_ring_places.py  test_sighting_coding.py
docs/: FAMILY_RELATIONSHIPS.md  MULTI_USER_ARCHITECTURE.md
frontend/: .gitignore  MIGRATION_NOTES.md  e2e-dialog  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
nginx/: nginx.conf  nginx.prod.conf
prompts/: frontend.md
ring-api/: pytest.ini  samconfig.toml  template.yaml
scripts/: MONITORING_README.md  alert.py  alert_config.json  backup.sh  backup_dynamodb.py  create_user_env.py  deploy.sh  duplicate_dynamodb.py  generate_password.py  log_monitor.sh  migrate_partners.py  monitor.py  monitoring.sh  pi-deploy.sh  playground.ipynb  restore.sh  start.sh  stop.sh  update.sh
(+144 files in other folders)
