[project]
name = "vogelring"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Anton Rösler", email = "github@antonroesler.com" }]
dependencies = [
    "pydantic>=2.9.2",
    "aws-lambda-powertools>=3.3.0",
    "boto3>=1.35.57",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.6.1",
    "cryptography>=44.0.0",
    "requests>=2.32.4",
    "pyjwt[crypto]>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.hatch.build.targets.wheel]
packages = ["ring-api/src/api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.4", "pytest-env>=1.1.3"]
exclude = [".aws-sam/*", ".git/*", "__pycache__/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "ring-api/.aws-sam/*",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.pytest]
pythonpath = ["ring-api/src"]
env = ["LOCAL=true", "LOCAL_PATH=/Users/anton/Projects/vogelring/data/pkl"]

[tool.rye.scripts]
convert = "rye run python scripts/processor/converter.py"
deploy = "bash deploy.sh"
test = "rye run pytest ring-api/tests/unit"
local = "bash run.sh"
